--- a/personal_bio_website_single_page-2.html
+++ b/personal_bio_website_single_page-2.html
@@ -181,11 +181,8 @@
         </div>
 
         <div class="card side">
-          <div class="avatar" aria-label="Profile image placeholder">
-            <span>
-              Add your headshot here<br/>
-              <span style="opacity:.75">(replace this box with an <b>&lt;img&gt;</b>)</span>
-            </span>
+          <div class="avatar" >
+            <img src="Japan Pic" alt="Tsjuki Fish Market - Tokyo, Japan" />
           </div>
           <div class="mini">
             <div><b>Role:</b> Finance / Analytics</div>
